; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/amcc/extr_crypto4xx_trng.c_ppc4xx_trng_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/amcc/extr_crypto4xx_trng.c_ppc4xx_trng_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto4xx_core_device = type { i64, i32, %struct.crypto4xx_device* }
%struct.crypto4xx_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ppc4xx_trng_remove(%struct.crypto4xx_core_device* %0) #0 {
  %2 = alloca %struct.crypto4xx_core_device*, align 8
  %3 = alloca %struct.crypto4xx_device*, align 8
  store %struct.crypto4xx_core_device* %0, %struct.crypto4xx_core_device** %2, align 8
  %4 = load %struct.crypto4xx_core_device*, %struct.crypto4xx_core_device** %2, align 8
  %5 = icmp ne %struct.crypto4xx_core_device* %4, null
  br i1 %5, label %6, label %32

6:                                                ; preds = %1
  %7 = load %struct.crypto4xx_core_device*, %struct.crypto4xx_core_device** %2, align 8
  %8 = getelementptr inbounds %struct.crypto4xx_core_device, %struct.crypto4xx_core_device* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %32

11:                                               ; preds = %6
  %12 = load %struct.crypto4xx_core_device*, %struct.crypto4xx_core_device** %2, align 8
  %13 = getelementptr inbounds %struct.crypto4xx_core_device, %struct.crypto4xx_core_device* %12, i32 0, i32 2
  %14 = load %struct.crypto4xx_device*, %struct.crypto4xx_device** %13, align 8
  store %struct.crypto4xx_device* %14, %struct.crypto4xx_device** %3, align 8
  %15 = load %struct.crypto4xx_core_device*, %struct.crypto4xx_core_device** %2, align 8
  %16 = getelementptr inbounds %struct.crypto4xx_core_device, %struct.crypto4xx_core_device* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.crypto4xx_core_device*, %struct.crypto4xx_core_device** %2, align 8
  %19 = getelementptr inbounds %struct.crypto4xx_core_device, %struct.crypto4xx_core_device* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @devm_hwrng_unregister(i32 %17, i64 %20)
  %22 = load %struct.crypto4xx_device*, %struct.crypto4xx_device** %3, align 8
  %23 = call i32 @ppc4xx_trng_enable(%struct.crypto4xx_device* %22, i32 0)
  %24 = load %struct.crypto4xx_device*, %struct.crypto4xx_device** %3, align 8
  %25 = getelementptr inbounds %struct.crypto4xx_device, %struct.crypto4xx_device* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @iounmap(i32 %26)
  %28 = load %struct.crypto4xx_core_device*, %struct.crypto4xx_core_device** %2, align 8
  %29 = getelementptr inbounds %struct.crypto4xx_core_device, %struct.crypto4xx_core_device* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @kfree(i64 %30)
  br label %32

32:                                               ; preds = %11, %6, %1
  ret void
}

declare dso_local i32 @devm_hwrng_unregister(i32, i64) #1

declare dso_local i32 @ppc4xx_trng_enable(%struct.crypto4xx_device*, i32) #1

declare dso_local i32 @iounmap(i32) #1

declare dso_local i32 @kfree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
